testsuite/poke.pkl/redef-diag-3.pk
/* { dg-do compile } */

fun foo = void:
{
  fun a = void: {}
  fun b = void: {}
  fun a = void: {} ; /* { dg-error "" } */
}
